# chatbot-esp32

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/audio_bsp/: CMakeLists.txt  audio_bsp.c  audio_bsp.h
components/board_power_bsp/: CMakeLists.txt
components/codec_board/: CMakeLists.txt  codec_init.c  lcd_init.c
components/epaper_driver_bsp/: CMakeLists.txt
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.cpp
